test/tests/stages/18_structures/invalid_struct_tags/cast_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  (
  struct
  identifier(s)
  )
  const int(0)
  ;
  return
  const int(0)
  ;
  }
